# Ants-vs-Bees

Lab5/: CMakeLists.txt  main.cpp
Lab5/CPP/: Bee.cpp  Bodyguard.cpp  Fire.cpp  Game.cpp  Harvester.cpp  Insect.cpp  LongThrower.cpp  Ninja.cpp  QueenAnt.cpp  ShortThrower.cpp  Thrower.cpp  Utilities.cpp  Wall.cpp
Lab5/H/: Bee.h  Bodyguard.h  Fire.h  Game.h  Harvester.h  Insect.h  LongThrower.h  Ninja.h  QueenAnt.h  ShortThrower.h  Thrower.h  Utilities.h  Wall.h
