cmake_minimum_required(VERSION 3.17)
project(Lab5)

set(CMAKE_CXX_STANDARD 14)

add_executable(Lab5 main.cpp H/Insect.h CPP/Insect.cpp CPP/Bee.cpp H/Bee.h CPP/Harvester.cpp H/Harvester.h CPP/Thrower.cpp H/Thrower.h CPP/Fire.cpp H/Fire.h CPP/LongThrower.cpp H/LongThrower.h CPP/ShortThrower.cpp H/ShortThrower.h CPP/Wall.cpp H/Wall.h CPP/Ninja.cpp H/Ninja.h CPP/Bodyguard.cpp H/Bodyguard.h CPP/Game.cpp H/Game.h CPP/QueenAnt.cpp H/QueenAnt.h CPP/Utilities.cpp H/Utilities.h)